[metadata]
name = tqdm-logging-wrapper
url = https://github.com/EpicWink/tqdm-logging-wrapper
author = Laurie
author_email = laurie_opperman@hotmail.com
license = "MIT"
description = Wrap standard-library logging to support TQDM progress-bars.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
py_modules =
    tqdm_logging_wrapper
package_dir =
    =src
setup_requires =
    setuptools-scm[toml] >= 3.4
python_requires = ~=3.6
